Cambio nombres de los ficheros shader (#68)

--- a/memoria/tex/apendices/javascript-doc.tex
+++ b/memoria/tex/apendices/javascript-doc.tex
@@ -151,7 +151,7 @@ Es una clase abstracta que contiene el código común de una escena 2D y una 3D.
 
 Con la sección anterior hemos aclarado que utilizaremos el mismo buffer de posiciones, las mismas clases para el programa shader y mucho código común para las escenas. Las diferencias fundamentales entre el código JavaScript dedicado al uso de WebGL para visualizar fractales 2D y 3D se encuentra en los parámetros de la escena y en las maneras de gestionar los eventos. En esta sección describiremos todos estos aspectos en lo relativo a escenas 2D.
 
-Recordamos que durante todo el capítulo \ref{chap:fractales-2D} estuvimos principalmente describiendo el código del fragment shader, pues es este el que se ejecuta en cada píxel, de forma que identificábamos cada píxel del canvas con un punto del plano complejo $\C$ (o varios si se aplica \hyperref[section:SSAA-2D]{\textcolor{blue}{SSAA}}) y calculábamos si éste pertenecía al conjunto de Mandelbrot o al conjunto de Julia que decidiéramos. Para ayudarnos a visualizar distintas regiones del plano, distintos conjuntos de Julia fijando diferentes constantes $c\in\C$ o cambiar el exponente de la función $P_{c,m}=z^m+c$ utilizamos variables \verb|uniform| que insistíamos que se asignaba su valor utilizando JavaScript. La clase que gestiona esa asignación de valores y el cambio de forma dinámica de los mismos es \verb|Scene2D|, de ahí el valor de esta clase. En concreto, y aunque ahora explicaremos su significado en relación con los atributos de la clase, las distintas variables \verb|uniform| que hemos utilizado en el shader (fichero `shader-wgl-fragment.js') son:
+Recordamos que durante todo el capítulo \ref{chap:fractales-2D} estuvimos principalmente describiendo el código del fragment shader, pues es este el que se ejecuta en cada píxel, de forma que identificábamos cada píxel del canvas con un punto del plano complejo $\C$ (o varios si se aplica \hyperref[section:SSAA-2D]{\textcolor{blue}{SSAA}}) y calculábamos si éste pertenecía al conjunto de Mandelbrot o al conjunto de Julia que decidiéramos. Para ayudarnos a visualizar distintas regiones del plano, distintos conjuntos de Julia fijando diferentes constantes $c\in\C$ o cambiar el exponente de la función $P_{c,m}=z^m+c$ utilizamos variables \verb|uniform| que insistíamos que se asignaba su valor utilizando JavaScript. La clase que gestiona esa asignación de valores y el cambio de forma dinámica de los mismos es \verb|Scene2D|, de ahí el valor de esta clase. En concreto, y aunque ahora explicaremos su significado en relación con los atributos de la clase, las distintas variables \verb|uniform| que hemos utilizado en el shader (fichero `fragment-shader-2D-fractals.js') son:
 
 \begin{lstlisting}
 uniform vec2 u_zoomCenter;
@@ -317,7 +317,7 @@ function verifyMaxIterations(number) {
 
 En el caso de escenas tridimensionales, en la memoria se puede apreciar que la complejidad se dispara, aunque realmente el grueso de la dificultad se haya en el fragment shader. En lo relativo a JavaScript es todo más sencillo, con la salvedad de que el número de parámetros sí que es mucho mayor en estos casos, pero la filosofía es exactamente la misma. Tenemos una clase \verb|Scene3D| que gestiona el paso de parámetros dinámicamente a WebGL, los visualizados y los cambios en estos valores. A su vez también contamos con un fichero \verb|fractals-3D.js| cuya función es bien parecida a la de \verb|fractals-2D.js| pero con su contexto: la gestión de eventos y la correcta modificación de indicadores HTML.
 
-Cuando visualizamos el espacio tridimensional usando técnicas como ray-tracing el fragment shader es mucho más complejo, aunque recordemos que en este momento lo único que nos interesa son las variables \verb|uniform| y su identificación con los parámetros de la escena. Veámos las variables que tenemos en el archivo \verb|shader-mandelbub-fragment.js|, el cual contiene el código fuente del fragment shader utilizado y además es realmente una extensión de \verb|shader-ray-tracer-fragment.js|.
+Cuando visualizamos el espacio tridimensional usando técnicas como ray-tracing el fragment shader es mucho más complejo, aunque recordemos que en este momento lo único que nos interesa son las variables \verb|uniform| y su identificación con los parámetros de la escena. Veámos las variables que tenemos en el archivo \verb|fragment-shader-3D-fractals.js|, el cual contiene el código fuente del fragment shader utilizado y además es realmente una extensión de \verb|fragment-shader-ray-tracer.js|.
 
 \begin{lstlisting}
 uniform vec3 u_lookfrom;
