--- a/memoria/tex/capitulos/capitulo-7.tex
+++ b/memoria/tex/capitulos/capitulo-7.tex
@@ -57,9 +57,9 @@ En concreto, para el código de JavaScript hemos creado las siguientes clases:
 
 Además, el fichero \verb|fractals-2D.js| utiliza un objeto de la clase \verb|Scene2D| para interactuar con el DOM, gestionar los eventos y así poder modificar dinámicamente los parámetros, de tal forma que cada vez que se interactúa con la página se registra un evento con una función manejadora asociada. Esta función manejadora utiliza los setters correspondientes del objeto \verb|Scene2D| y hace las modificaciones correspondientes para finalmente llamar a \verb|drawScene| y así cambiar dinámicamente la visualización.
 
-El código completo correspondiente a la funcionalidad desarrollada en este capítulo se puede encontrar en GitHub: \url{https://github.com/JAntonioVR/Geometria-Fractal/tree/main/static}. La web interactiva ya terminada correspondiente a la visualización de fractales en 2D puede visitarse en \url{https://jantoniovr.github.io/Geometria-Fractal/2D-fractals.html}. Y la funcionalidad completa de JavaScript detallada de cada clase creada para éste y próximos capítulos puede consultarse en el apéndice \ref{appendix:javascript}.
+El código completo correspondiente a la funcionalidad desarrollada en este capítulo y en los siguientes se puede encontrar en GitHub: \url{https://github.com/JAntonioVR/Geometria-Fractal/tree/main/static}. La web interactiva ya terminada correspondiente a la visualización de fractales en 2D puede visitarse en \url{https://jantoniovr.github.io/Geometria-Fractal/2D-fractals.html}. Y la funcionalidad completa de JavaScript detallada de cada clase creada para éste y próximos capítulos puede consultarse en el apéndice \ref{appendix:javascript}.
 
-Una vez estructurado el código en JavaScript, es bueno recordar que, como dijimos al inicio de este capítulo, nuestro vertex shader es trivial, simplemente asigna a \verb|gl_Position| las mismas coordenadas que se introducen desde JavaScript al buffer de posiciones. Es en el fragment shader donde se realiza el grueso de la programación necesaria para poder visualizar los distintos fractales. Por este motivo, las siguientes secciones estarán implícitamente dedicadas a explicar la implementación en GLSL del fragment shader. 
+Una vez estructurado el código en JavaScript, es bueno recordar que, como dijimos al inicio de este capítulo, nuestro vertex shader es trivial, simplemente asigna a \verb|gl_Position| las mismas coordenadas que se introducen desde JavaScript al buffer de posiciones. Es en el fragment shader donde se realiza el grueso de la programación necesaria para poder visualizar los distintos fractales. Por este motivo, las siguientes secciones estarán implícitamente dedicadas a explicar la implementación en GLSL del fragment shader, el cual se puede encontrar en el fichero \verb|fragment-shader-2D-fractals.js|, disponible en \url{https://github.com/JAntonioVR/Geometria-Fractal/blob/main/static/glsl/fragment-shader-2D-fractals.js}. 
 
 \section{Identificando la pantalla con el plano}
 \label{section:pantalla-plano}
