--- a/memoria/main.tex
+++ b/memoria/main.tex
@@ -118,23 +118,23 @@
 
 \import{tex/}{objetivos.tex}
 
-\chapter{El concepto de \textit{fractal}.}
+\chapter{El concepto de \textit{fractal}}
 \label{chap:concepto}
 
 \import{tex/capitulos/}{capitulo-1.tex}
 
-\chapter{Iteración.}
+\chapter{Iteración}
 \label{chap:iteracion}
 
 \import{tex/capitulos/}{capitulo-2.tex}
 
 
-\chapter{Conjuntos de Julia y Mandelbrot.}
+\chapter{Conjuntos de Julia y Mandelbrot}
 \label{chap:Julia-Mandelbrot}
 
 \import{tex/capitulos/}{capitulo-3.tex}
 
-\chapter{Sistemas de Funciones Iteradas.}
+\chapter{Sistemas de Funciones Iteradas}
 \label{chap:SFI}
 
 \import{tex/capitulos/}{capitulo-4.tex}
@@ -149,17 +149,17 @@
 
 \import{tex/capitulos/}{capitulo-6.tex}
 
-\chapter{Visualización de fractales en 2D.}
+\chapter{Visualización de fractales en 2D}
 \label{chap:fractales-2D}
 
 \import{tex/capitulos/}{capitulo-7.tex}
 
-\chapter{Introducción al \textit{Ray-Tracing}.}
+\chapter{Introducción al \textit{Ray-Tracing}}
 \label{chap:ray-tracing}
 
 \import{tex/capitulos/}{capitulo-8.tex}
 
-\chapter{Visualización de fractales en 3D.}
+\chapter{Visualización de fractales en 3D}
 \label{chap:fractales-3D}
 
 \import{tex/capitulos/}{capitulo-9.tex}
